--- a/homestay/src/styles/AboutUs.scss
+++ b/homestay/src/styles/AboutUs.scss
@@ -1,13 +1,17 @@
-@import "../styles/breakpoints.scss";
+@import "./variables.scss";
+@import "./breakpoints.scss";
+
 .aboutus {
   position: relative;
-  background-color: rgb(198, 198, 198);
-  height: 600px;
-  top: -40px;
+  background: linear-gradient(135deg, #e6e6e6, #c6c6c6);
+  min-height: 600px;
+
   z-index: 0;
-  padding: 60px;
+  padding: 60px 20px;
   display: flex;
   justify-content: center;
+  margin-bottom: 0;
+
   &_heading {
     position: absolute;
     display: flex;
@@ -17,35 +21,67 @@
     letter-spacing: 5px;
     color: white;
     text-align: center;
-    font-weight: 10;
-    background-color: rgb(198, 198, 198);
-    width: 30%;
+    font-weight: 500;
+    background-color: rgba(105, 104, 104, 0.8);
+    width: 90%;
+    max-width: 300px;
     height: 40px;
     top: 70px;
+    left: 50%;
+    transform: translateX(-50%);
+    backdrop-filter: blur(5px);
+    border-radius: 4px;
   }
+
   &_content {
-    margin: 30px;
-    height: 95%;
-    width: 80%;
-    border: 1px solid black;
+    margin: 30px auto;
+    width: 95%;
+    max-width: 1200px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
     display: flex;
     padding: 30px;
     gap: 30px;
     justify-content: center;
     flex-direction: column;
-    flex-wrap: wrap;
+    background: rgba(255, 255, 255, 0.9);
+    border-radius: 12px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+
+    @include md {
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
 
     &_left {
-      width: 30%;
-      height: 90%;
+      width: 100%;
+      height: 300px;
+
+      @include md {
+        width: 30%;
+        height: 90%;
+      }
+
       &_pic {
         height: 100%;
         width: 100%;
+        object-fit: cover;
+        border-radius: 8px;
       }
     }
+
     &_right {
-      width: calc(70% - 30px);
-      height: 90%;
+      width: 100%;
+
+      @include md {
+        width: calc(70% - 30px);
+      }
+
+      p {
+        font-size: 16px;
+        line-height: 1.6;
+        color: $darkgrey;
+        margin-bottom: 20px;
+      }
     }
   }
 }
