--- a/homestay/src/styles/RoomCard.scss
+++ b/homestay/src/styles/RoomCard.scss
@@ -114,6 +114,17 @@
       font-size: 16px;
       font-weight: 500;
     }
+    .description {
+      color: $darkgrey;
+      font-size: 14px;
+      line-height: 1.5;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      margin-bottom: 10px;
+    }
 
     &_features {
       display: flex;
