--- a/homestay/src/styles/PopularDestinations.scss
+++ b/homestay/src/styles/PopularDestinations.scss
@@ -80,6 +80,7 @@
       width: 100%;
       padding: 20px;
       overflow-x: auto;
+      display: flex;
       scrollbar-width: none;
       -ms-overflow-style: none;
 
