--- a/homestay/src/styles/Signup.scss
+++ b/homestay/src/styles/Signup.scss
@@ -18,7 +18,9 @@
     border-radius: 20px;
     box-shadow: 0 8px 30px rgba(0, 0, 0, 0.08);
     transition: all 0.3s ease;
-
+    .error{
+      color:red
+    }
     @include sm {
       padding: 50px 40px;
     }
@@ -222,3 +224,4 @@
     }
   }
 }
+
